Get top level query split into lines
#115
Builds some infrastructure, but a long way to go!

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -206,6 +206,7 @@
     <Compile Include="QueryVisitors\EnumerableRangeExpression.cs" />
     <Compile Include="QueryVisitors\EnumerableRangeExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\ExpressionVariableInvokeExpressionTransformer.cs" />
+    <Compile Include="QueryVisitors\PrettyFormattingQueryVisitor.cs" />
     <Compile Include="QueryVisitors\PropertyExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
