Simple infrastructure for a command line branch

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -151,6 +151,7 @@
     <Compile Include="CodeContext.cs" />
     <Compile Include="CombinedGeneratedCode.cs" />
     <Compile Include="CPPTranslator.cs" />
+    <Compile Include="ExecutionCommon\CommandLineExecutor.cs" />
     <Compile Include="ExecutionCommon\ExecutionEnvironment.cs" />
     <Compile Include="ExecutionCommon\ExecutionUtilities.cs" />
     <Compile Include="ExecutionCommon\IQueryExectuor.cs" />
