--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -411,6 +411,7 @@
     <Compile Include="CombinedGeneratedCodeTest.cs" />
     <Compile Include="CPPTranslatorTest.cs" />
     <Compile Include="DummyQueryExectuor.cs" />
+    <Compile Include="ExecutionCommon\CommandLineTestExecutorTest.cs" />
     <Compile Include="Expressions\ExpressionStringConverterTest.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitorTest.cs" />
     <Compile Include="Expressions\ExpressionVisitorMethodCallTests.cs" />
