First go at getting the bash executor in there

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -412,6 +412,7 @@
     <Compile Include="CPPTranslatorTest.cs" />
     <Compile Include="DummyQueryExectuor.cs" />
     <Compile Include="ExecutionCommon\CommandLineTestExecutorTest.cs" />
+    <Compile Include="ExecutionCommon\LocalBashExecutorTest.cs" />
     <Compile Include="Expressions\ExpressionStringConverterTest.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitorTest.cs" />
     <Compile Include="Expressions\ExpressionVisitorMethodCallTests.cs" />
