--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -414,6 +414,7 @@
     <Compile Include="ExecutionCommon\CommandLineTestExecutorTest.cs" />
     <Compile Include="ExecutionCommon\LocalBashExecutorTest.cs" />
     <Compile Include="ExecutionCommon\LocalBashHelpersTest.cs" />
+    <Compile Include="ExecutionCommon\RemoteBashExecutorTest.cs" />
     <Compile Include="Expressions\ExpressionStringConverterTest.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitorTest.cs" />
     <Compile Include="Expressions\ExpressionVisitorMethodCallTests.cs" />
