--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -162,6 +162,7 @@
     <Compile Include="ExecutionCommon\LocalBashExecutor.cs" />
     <Compile Include="ExecutionCommon\LocalBashHelpers.cs" />
     <Compile Include="ExecutionCommon\LocalExecutor.cs" />
+    <Compile Include="ExecutionCommon\RemoteBashExecutor.cs" />
     <Compile Include="Expressions\ArrayExpressionParser.cs" />
     <Compile Include="Expressions\ArrayInfoVector.cs" />
     <Compile Include="Expressions\DeclarableParameter.cs" />
