Added remote command line execution #187

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -415,6 +415,7 @@
     <Compile Include="ExecutionCommon\LocalBashExecutorTest.cs" />
     <Compile Include="ExecutionCommon\LocalBashHelpersTest.cs" />
     <Compile Include="ExecutionCommon\RemoteBashExecutorTest.cs" />
+    <Compile Include="ExecutionCommon\RemoteBashHelpersTest.cs" />
     <Compile Include="Expressions\ExpressionStringConverterTest.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitorTest.cs" />
     <Compile Include="Expressions\ExpressionVisitorMethodCallTests.cs" />
