--- a/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
+++ b/LINQToTTree/LinqToTTreeInterfacesLib/LinqToTTreeInterfacesLib.csproj
@@ -96,6 +96,7 @@
     <Compile Include="ICodeOptimizationService.cs" />
     <Compile Include="IDeclaredParameter.cs" />
     <Compile Include="IExecutableCode.cs" />
+    <Compile Include="IExecutionEnvironment.cs" />
     <Compile Include="IExpressionHolder.cs" />
     <Compile Include="IFutureValue.cs" />
     <Compile Include="IGeneratedQueryCode.cs" />
@@ -104,6 +105,8 @@
     <Compile Include="IQMArgument.cs" />
     <Compile Include="IQMFuncExecutable.cs" />
     <Compile Include="IQMFunctionSource.cs" />
+    <Compile Include="IQueryExectuor.cs" />
+    <Compile Include="IQueryExecutorFactory.cs" />
     <Compile Include="IQueryResultCache.cs" />
     <Compile Include="IQVCollectionResultOperator.cs" />
     <Compile Include="IQVScalarResultOperator.cs" />
