--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AtlasSSH" version="3.5.3" targetFramework="net451" />
+  <package id="AtlasSSH" version="3.6.0" targetFramework="net451" />
   <package id="CredentialManagement" version="1.0.2" targetFramework="net451" />
   <package id="DNS" version="1.2.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
@@ -15,4 +15,5 @@
   <package id="ROOT.NET.Tree" version="5.34.36.13" targetFramework="net45" />
   <package id="Sprache" version="2.1.0" targetFramework="net451" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net451" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net451" />
 </packages>
