--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -3,6 +3,9 @@
   <package id="AtlasSSH" version="3.6.1" targetFramework="net451" />
   <package id="CredentialManagement" version="1.0.2" targetFramework="net451" />
   <package id="DNS" version="1.2.3" targetFramework="net451" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net451" />
   <package id="NVelocity" version="1.0.3" />
   <package id="Polly" version="5.3.1" targetFramework="net451" />
