--- a/LINQToTTree/LINQToTreeHelpers/packages.config
+++ b/LINQToTTree/LINQToTreeHelpers/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Remotion.Linq" version="2.0.3-x-009-160302-230435" targetFramework="net45" />
   <package id="ROOT.NET.Core" version="5.34.36.13" targetFramework="net45" />
   <package id="ROOT.NET.Dynamic" version="5.34.36.13" targetFramework="net45" />
