Fix up how we test for exceptions now that we have aggregate exceptions.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -448,6 +448,7 @@
     <Compile Include="CombinedGeneratedCodeTest.cs" />
     <Compile Include="CPPTranslatorTest.cs" />
     <Compile Include="DummyQueryExectuor.cs" />
+    <Compile Include="ExceptionUtils.cs" />
     <Compile Include="ExecutionCommon\CommandLineTestExecutorTest.cs" />
     <Compile Include="ExecutionCommon\LocalBashExecutorTest.cs" />
     <Compile Include="ExecutionCommon\LocalBashHelpersTest.cs" />
