Update most packages to most recent versions. #252

--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AtlasSSH" version="4.0.0-pre02" targetFramework="net471" />
+  <package id="AtlasSSH" version="4.0.0-pre03" targetFramework="net471" />
   <package id="CredentialManagement" version="1.0.2" targetFramework="net451" />
-  <package id="DNS" version="1.2.3" targetFramework="net451" />
+  <package id="DNS" version="3.0.0" targetFramework="net471" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
@@ -18,8 +18,8 @@
   <package id="Nito.Cancellation" version="1.0.5" targetFramework="net471" />
   <package id="Nito.Collections.Deque" version="1.0.4" targetFramework="net471" />
   <package id="Nito.Disposables" version="1.2.3" targetFramework="net471" />
-  <package id="NVelocity" version="1.0.3" />
-  <package id="Polly" version="5.6.1" targetFramework="net471" />
+  <package id="NVelocity" version="1.1.1" targetFramework="net471" />
+  <package id="Polly" version="5.7.0" targetFramework="net471" />
   <package id="Remotion.Linq" version="2.0.3-x-009-160302-230435" targetFramework="net45" />
   <package id="ROOT.NET.All" version="5.34.36.13" targetFramework="net45" />
   <package id="ROOT.NET.Core" version="5.34.36.13" targetFramework="net45" />
@@ -31,6 +31,6 @@
   <package id="SSH.NET" version="2016.1.0" targetFramework="net451" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net471" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net471" />
-  <package id="System.Reflection.TypeExtensions" version="4.1.0" targetFramework="net471" />
+  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="net471" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
 </packages>
