--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -495,6 +495,7 @@
     <Compile Include="FutureResultOperatorsTest.cs" />
     <Compile Include="FutureValueTTest.cs" />
     <Compile Include="GeneratedCodeTest.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="HelpersTest.cs" />
     <Compile Include="MEFUtilities.cs" />
     <Compile Include="Optimization\OptimizationUtilsTest.cs" />
